# backend

./: .dockerignore  .env.enc  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_new_flow.py  vault.py
app/: __init__.py  config.py  main.py
app/api/: deps.py  errors.py  validation.py
app/api/v1/: auth.py  documents.py  router.py  system.py  users.py
app/db/: __init__.py  collections.py  indexes.py  mongo_utils.py
app/models/: __init__.py  alert.py  base.py  document.py  user.py
app/schemas/: __init__.py  v1.py  v1_system.py
app/services/: __init__.py  agents.py  alerts_service.py  coalition_matcher.py  mock_profile.py  monitor_stub.py  reply_store.py  seed_documents.py  seed_loader.py  tag_utils.py
data/seed/: bloomington_seed.json  meeting_2026_03_04.json  meeting_2026_03_25.json
data/seed/archive/: meeting_2026_03_trending.json
