[project]
name = "tribune-backend"
version = "0.1.0"
description = "Tribune API backend built with FastAPI and MongoDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.6",
    "fastapi>=0.115.0",
    "motor>=3.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pymongo>=4.10.0",
    "uvicorn[standard]>=0.32.0",
]
